# tech-debt-estimator

./: LICENSE  README.md  pyproject.toml  setup.py
tech_debt_estimator/: __init__.py  analyzer.py  cli.py  formatters.py  metrics.py
tests/: __init__.py  test_analyzer.py
